from typing import List, Dict

class User:
    def __init__(self, username: str, email: str, password: str, avatar: str):
        self.username = username
        self.email = email
        self.password = password
        self.avatar = avatar

    def create_account(self) -> None:
        """
        Create a new user account.
        """
        # Implementation here

    def login(self) -> None:
        """
        Log in the user.
        """
        # Implementation here

    def logout(self) -> None:
        """
        Log out the user.
        """
        # Implementation here

    def customize_avatar(self) -> None:
        """
        Customize the user's avatar.
        """
        # Implementation here

    def update_profile(self) -> None:
        """
        Update the user's profile.
        """
        # Implementation here


class Game:
    def __init__(self, players: List[User]):
        self.players = players

    def start_game(self) -> None:
        """
        Start a new game.
        """
        # Implementation here

    def end_game(self) -> None:
        """
        End the current game.
        """
        # Implementation here


class Chat:
    def __init__(self, messages: List[str]):
        self.messages = messages

    def send_message(self) -> None:
        """
        Send a chat message.
        """
        # Implementation here

    def get_messages(self) -> List[str]:
        """
        Get all chat messages.
        """
        # Implementation here


class Statistics:
    def __init__(self, game_history: List[Game]):
        self.game_history = game_history

    def get_game_history(self) -> List[Game]:
        """
        Get the game history.
        """
        # Implementation here

    def get_player_stats(self) -> Dict[str, int]:
        """
        Get the player statistics.
        """
        # Implementation here
